# lab-core

./: .gitignore  README.md  docker-compose.yml  down.sh  gitignore.sh  overview.txt  run.sh
 python_code_rag/: Dockerfile  docker-compose.yml  pyproject.toml
 python_code_rag/.ai/specs/: design.md  spec.md
 python_code_rag/.ai/specs/tasks/: 1.md  2.md  3.md  4.md  5.md  6.md
 python_code_rag/app/: chunker.py  config.py  embedder.py  main.py  store.py
 python_code_rag/app/routers/: health.py
app/: .env  Dockerfile  config.py  database.py  main.py  requirements.txt
app/models/: exam_catalog.py  patient.py  practitioner.py  service_request.py  service_request_item.py
app/routes/: exam_catalog.py  patients.py  practitioners.py  service_requests.py
app/schemas/: exam_catalog.py  service_request.py
app/seed/: seed_data.py
app/tests/: exam-catalog.http
core-lab/: database.py  main.py
core-lab/models/: patient.py  practitioner.py  service_request_item.py
core-lab/routes/: health.py
core-lab/schemas/: patient.py  practitioner.py  service_request.py
core-lab/tests/: service-requests.http
