[project]
name = "python-code-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "intersystems-irispython",
  "ollama",
  "httpx",
  "tree-sitter",
  "tree-sitter-python",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
